# ChangeLog for dev-java/sun-jdk
# Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
# $Header: $

  02 Oct 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha71.ebuild, +sun-jdk-1.7.0.0_alpha73.ebuild:
  Bump

  17 Sep 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha70.ebuild, +sun-jdk-1.7.0.0_alpha72.ebuild:
  Bump

  07 Sep 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha68.ebuild, +sun-jdk-1.7.0.0_alpha71.ebuild:
  Bump

  23 Aug 2009, Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha67.ebuild, +sun-jdk-1.7.0.0_alpha70.ebuild:
  Bump

  10 Aug 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha66.ebuild, +sun-jdk-1.7.0.0_alpha68.ebuild:
  Bump
 
  03 Aug 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha65.ebuild, +sun-jdk-1.7.0.0_alpha67.ebuild:
  Bump

  29 Jul 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha64.ebuild, +sun-jdk-1.7.0.0_alpha66.ebuild:
  Bump

  21 Jul 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha62.ebuild, +sun-jdk-1.7.0.0_alpha65.ebuild:
  Bump

  14 Jul 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha61.ebuild, +sun-jdk-1.7.0.0_alpha64.ebuild:
  Bump

  26 Jun 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha60.ebuild, +sun-jdk-1.7.0.0_alpha62.ebuild:
  Bump

  18 Jun 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha59.ebuild, +sun-jdk-1.7.0.0_alpha61.ebuild:
  Bump

  13 Jun 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha58.ebuild, +sun-jdk-1.7.0.0_alpha60.ebuild:
  Bump

  16 May 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha57.ebuild, +sun-jdk-1.7.0.0_alpha59.ebuild:
  Bump.

  10 May 2009; Fabian Fingerle <fabian@datensalat.eu>
  -sun-jdk-1.7.0.0_alpha56.ebuild, +sun-jdk-1.7.0.0_alpha58.ebuild
  Bump

  07 May 2009; Vlastimil Babka <caster@gentoo.org>