@@ -2,6 +2,11 @@
 # Copyright 1999-2009 Gentoo Foundation; Distributed under the GPL v2
 # $Header: $
 
+  02 Oct 2009; Vlastimil Babka <caster@gentoo.org>
+  -sun-jdk-1.6.0.14_beta5.ebuild, -sun-jdk-1.6.0.14_beta6.ebuild,
+  +sun-jdk-1.6.0.18_beta2.ebuild:
+  Bump new 1.6 early access.
+
   02 Oct 2009, Fabian Fingerle <fabian@datensalat.eu>
   -sun-jdk-1.7.0.0_alpha71.ebuild, +sun-jdk-1.7.0.0_alpha73.ebuild:
   Bump
